# GPTStoryworld

./: .gitignore  AGENTS.md  README.md  _openai_models.py  _openai_ping.py  _openai_token_test.py  controller.js  desktop.ini  meta-calc.js  package.json  promptGenerator.js  raw_storyworld.json  storyworld_reader.html  storyworld_reader_swmd.html  storyworldmanifold.html  storyworldmanifoldv2.html  sweepweave_validator.py  trmHybrid.md
chat_sessions/: 2026-02-04.md  StAlbansPolish.txt
claude-skills/: SKILL_storyworlds_v4.md  storyworlds(2).skill  storyworlds(4).skill  storyworlds.skill
codex-chat-sessions/: auth.json  history.jsonl  models_cache.json  version.json
codex-session-logs/: 2026-02-05_session.md  2026-02-11_session.md  2026-02-11_storyworld_quality_journal.md
papers/: desktop.ini  (+3 more)
storyworld-env/: ALL_IN_ONE.py  ARCHITECTURE.md  DOWNLOAD_README.txt  INTEGRATION_GUIDE.md  MANIFEST.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  corpus_amplification.py  deploy.sh  manifold_projection.py  pyproject.toml  quality_vector_score.py  test_manifold_projection.py
storyworld-env/pathing_lab/: README.md  inject_pathing_gates.py
verifiers_envs/negotiation-storyworld-env/: README.md  audit_storyworld.py  pyproject.toml
verifiers_envs/storyworld-symbolic-env/: README.md  pyproject.toml
verifiers_envs/storyworld-symbolic-env/engine/: queries.metta  scoring.metta  step.metta  visibility.metta
verifiers_envs/storyworld-symbolic-env/examples/: hermes_storyworld_arcee_trinity.json  hermes_storyworld_config.json  hermes_storyworld_qwen2b_ablation.json  hermes_storyworld_qwen2b_guard_blind_ablation.json  hermes_storyworld_qwen2b_offer_ablation.json  hermes_storyworld_qwen2b_shortspin.json  hermes_storyworld_qwen2b_thin_margin_ablation.json  hermes_storyworld_qwen2b_with_metta.json  hermes_storyworld_trm_adapter_test.json
verifiers_envs/storyworld-symbolic-env/rules/: commerce.metta  movement.metta  observation.metta  sanctions.metta  social.metta
verifiers_envs/storyworld-symbolic-env/symbolic_storyworld_env/: __init__.py  hermes_storyworld.py  jsonl_trace.py  metta_bridge.py  offline_judge.py  qwen_local_policy.py  run_route_ablation.py  trm_router.py  turn_trace_export.py
verifiers_envs/storyworld-symbolic-env/tests/: test_route_ablation.py  test_symbolic_smoke.py
verifiers_envs/storyworld-symbolic-env/world/: affordances.metta  endings.metta  initial_state.metta  norms.metta  ontology.metta
verifiers_envs/storyworld-symbolic-env/world/scenarios/: market_square.metta
(+1000 files in other folders)
