[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "negotiation-storyworld-env"
version = "0.1.0"
description = "Static QA and manifold projection tools for diplomacy negotiation storyworld formulas."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "GPTStoryworld" }
]
dependencies = []

[tool.setuptools]
py-modules = ["audit_storyworld", "formula_manifold_projection"]
