[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storyworld-symbolic-env"
version = "0.1.0"
description = "Symbolic storyworld verifier environment with Hermes orchestration and MeTTa replay"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["symbolic_storyworld_env*"]
